Fix spacing issue between expericence and work

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,6 +35,15 @@
 .row{
 	margin-left: -17.5px; 
     margin-right: -17.5px; 
+      display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+
+.row > [class*='col-'] {
+	 display: flex;
+	 flex-direction: column;
 }
 
 [class*='col-']{
@@ -332,8 +341,11 @@ section{
 
 #years-experence{
 	margin: 150px 0;
+	display: block;
 	padding: 0;
 }
+
+
 
 #quote, #twitter{
 	p{
